json_infra/VpcStack.template.json
{
 "Resources": {
  "MyVpcpolkaC6811AD5": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/Resource"
   }
  },
  "MyVpcpolkapublicSubnet1Subnet96AD7A8C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet1/Subnet"
   }
  },
  "MyVpcpolkapublicSubnet1RouteTable71A19C48": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet1/RouteTable"
   }
  },
  "MyVpcpolkapublicSubnet1RouteTableAssociation0F2B66CF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcpolkapublicSubnet1RouteTable71A19C48"
    },
    "SubnetId": {
     "Ref": "MyVpcpolkapublicSubnet1Subnet96AD7A8C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcpolkapublicSubnet1DefaultRoute111B96F1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcpolkaIGW791A879B"
    },
    "RouteTableId": {
     "Ref": "MyVpcpolkapublicSubnet1RouteTable71A19C48"
    }
   },
   "DependsOn": [
    "MyVpcpolkaVPCGW56512AC8"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet1/DefaultRoute"
   }
  },
  "MyVpcpolkapublicSubnet1EIP9B3AF2A4": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet1/EIP"
   }
  },
  "MyVpcpolkapublicSubnet1NATGatewayC2D4C0D2": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVpcpolkapublicSubnet1EIP9B3AF2A4",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MyVpcpolkapublicSubnet1Subnet96AD7A8C"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MyVpcpolkapublicSubnet1DefaultRoute111B96F1",
    "MyVpcpolkapublicSubnet1RouteTableAssociation0F2B66CF"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet1/NATGateway"
   }
  },
  "MyVpcpolkapublicSubnet2Subnet6A30C6D3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet2/Subnet"
   }
  },
  "MyVpcpolkapublicSubnet2RouteTableBC266074": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet2/RouteTable"
   }
  },
  "MyVpcpolkapublicSubnet2RouteTableAssociationB13287A7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcpolkapublicSubnet2RouteTableBC266074"
    },
    "SubnetId": {
     "Ref": "MyVpcpolkapublicSubnet2Subnet6A30C6D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcpolkapublicSubnet2DefaultRoute9E1DEDD9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcpolkaIGW791A879B"
    },
    "RouteTableId": {
     "Ref": "MyVpcpolkapublicSubnet2RouteTableBC266074"
    }
   },
   "DependsOn": [
    "MyVpcpolkaVPCGW56512AC8"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/publicSubnet2/DefaultRoute"
   }
  },
  "MyVpcpolkaprivateSubnet1Subnet58E937F3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet1/Subnet"
   }
  },
  "MyVpcpolkaprivateSubnet1RouteTableBD181FB7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet1/RouteTable"
   }
  },
  "MyVpcpolkaprivateSubnet1RouteTableAssociation8C6F11B3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcpolkaprivateSubnet1RouteTableBD181FB7"
    },
    "SubnetId": {
     "Ref": "MyVpcpolkaprivateSubnet1Subnet58E937F3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcpolkaprivateSubnet1DefaultRouteB82B2EEA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcpolkapublicSubnet1NATGatewayC2D4C0D2"
    },
    "RouteTableId": {
     "Ref": "MyVpcpolkaprivateSubnet1RouteTableBD181FB7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet1/DefaultRoute"
   }
  },
  "MyVpcpolkaprivateSubnet2Subnet56C21A1A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet2/Subnet"
   }
  },
  "MyVpcpolkaprivateSubnet2RouteTable1514DDAD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet2/RouteTable"
   }
  },
  "MyVpcpolkaprivateSubnet2RouteTableAssociationF222650B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcpolkaprivateSubnet2RouteTable1514DDAD"
    },
    "SubnetId": {
     "Ref": "MyVpcpolkaprivateSubnet2Subnet56C21A1A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcpolkaprivateSubnet2DefaultRouteF24CD0D2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcpolkapublicSubnet1NATGatewayC2D4C0D2"
    },
    "RouteTableId": {
     "Ref": "MyVpcpolkaprivateSubnet2RouteTable1514DDAD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/privateSubnet2/DefaultRoute"
   }
  },
  "MyVpcpolkaIGW791A879B": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/MyVpc-polka"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/IGW"
   }
  },
  "MyVpcpolkaVPCGW56512AC8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MyVpcpolkaIGW791A879B"
    },
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/MyVpc-polka/VPCGW"
   }
  },
  "RdsSecurityGrouppolka2928ED77": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VpcStack/RdsSecurityGrouppolka",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     },
     {
      "CidrIpv6": "::/0",
      "Description": "Allow PostgreSQL to IPv6",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow PostgreSQL access from IPv4",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     },
     {
      "CidrIpv6": "::/0",
      "Description": "Allow PostgreSQL access from IPv6",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "VpcId": {
     "Ref": "MyVpcpolkaC6811AD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/RdsSecurityGrouppolka/Resource"
   }
  },
  "DbSubnetGroup": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for RDS instance",
    "DBSubnetGroupName": "my-rds-subnet-group-polka",
    "SubnetIds": [
     {
      "Ref": "MyVpcpolkapublicSubnet1Subnet96AD7A8C"
     },
     {
      "Ref": "MyVpcpolkapublicSubnet2Subnet6A30C6D3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/DbSubnetGroup"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OwW7CMBBEv4W74wI90B5pqBAXZCUVV7RZFrEQ1sheN4oi/r0KQaSnmXkajWZuZ58LO51AEzM8XLKaK9uVCngx0MR9Rzi33e6GJj/KzuXGpapmLFMlpD0bXeGT0g9UNY18ZMsYPTIoe3mVe/O9cb1sQdeg1EBrXOBfUBqHN6IUhF6F4ckzLVUBT1cSNSVhCqztOvh0e3z4D+4mHKLNj7L6GqaftKDoU0C6G9fqycvbu51N7cfkHJmzkET5SrYY9A+49gOYLQEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefMyVpcpolkapublicSubnet1Subnet96AD7A8CBE828186": {
   "Value": {
    "Ref": "MyVpcpolkapublicSubnet1Subnet96AD7A8C"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefMyVpcpolkapublicSubnet1Subnet96AD7A8CBE828186"
   }
  },
  "ExportsOutputRefMyVpcpolkapublicSubnet2Subnet6A30C6D3F48AD165": {
   "Value": {
    "Ref": "MyVpcpolkapublicSubnet2Subnet6A30C6D3"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefMyVpcpolkapublicSubnet2Subnet6A30C6D3F48AD165"
   }
  },
  "ExportsOutputFnGetAttRdsSecurityGrouppolka2928ED77GroupIdC552AAFB": {
   "Value": {
    "Fn::GetAtt": [
     "RdsSecurityGrouppolka2928ED77",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputFnGetAttRdsSecurityGrouppolka2928ED77GroupIdC552AAFB"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
